...
    tools:context="it.dbortoluzzi.tuttiapposto.ui.activities.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.drawerlayout.widget.DrawerLayout
        android:fitsSystemWindows="true"
        android:id="@+id/main_drawer_layout"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
...
                    android:layout_width="match_parent"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </com.google.android.material.appbar.AppBarLayout>

            <fragment
                android:id="@+id/main_nav_host"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:name="androidx.navigation.fragment.NavHostFragment"
                app:defaultNavHost="true"
                app:navGraph="@navigation/nav_graph" />
...
