<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/outline_filter_list"
        android:title="@string/filter"
        android:visible="true"
        android:onClick="onFilterClicked"/>

    <item
        android:id="@+id/activityOptions"
        android:icon="@drawable/ic_settings"
        android:title="@string/options"
        android:onClick="onSettingsClicked"/>


    <item
        android:id="@+id/navLogout"
        android:title="@string/logout"
        android:icon="@drawable/outline_logout"
        android:onClick="onLogoutClicked"/>

</menu>